@@ -1,3 +1,11 @@
+2004-08-09  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b98
+
+	* Change: Make several files ready for register_globals
+	  photo_owner
+	  search
+	  user_preferences
+	  index
+
 2004-08-09  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b97
 
         * Fix: numAccessibleItems was incorrectly checking isHiddenRecurse()
